# crabv6

./: .gitignore  Cargo.toml  README.md  build.rs  filesystem.md  interrupt.md
.cargo/: config.toml
.docs/: README.md  architecture.md  build-system.md  builtins.md  filesystem.md  pipes_todo.md  syscalls.md  user-programs.md
src/: elf.rs  embedded.rs  fd.rs  fs.rs  heap.rs  interrupts.rs  kernel_entry.S  main.rs  panic_handler.rs  proc.rs  process.rs  scheduler.rs  syscall.rs  uart.rs  user.rs  utils.rs  virtio.rs
user_bin/: Cargo.toml  build.rs  link.x  memory.x
user_bin/.cargo/: config.toml
user_bin/src/: lib.rs  main.rs
