[package]
name = "crabv6"
version = "0.1.0"
edition = "2024"

[dependencies]
const-default = { version = "1.0.0", features = ["derive"] }
linked_list_allocator = "0.10.5"
riscv-rt = { version = "0.16.0", features = ["s-mode"] }
sbi = "0.3.0"
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
