[package]
name = "user_bin"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["rlib"]

[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "wc"
path = "src/bin/wc.rs"

[dependencies]

[profile.dev]
opt-level = "s"

[profile.release]
lto = true
opt-level = "s"
strip = true
